 - seven_segment - library to drive an seven-segment LED display

peripherals:
 - PWM libraries largely rewritten, enhanced documentation.
 - PWM hardware library: removed alias declarations for enhanced CCP modules (now in device files)
 - SPI library: removed alias declarations for midrange PICs
 - I2C hardware library: removed alias declarations for midrange PICs

jal extension:
 - added delay_1s

samples:
 - seven_segment samples
 - over 50 new blink-an-LED samples
 - 2 samples for multi-channel dimmers (combined use of PWM and ADC)
 - eeprom samples for 18Fs
 - added sample files for PIC16f723
 - added auto start USB bootloader
 
compiler:
 -

project:
 -



jallib-0.4.0:
------------

Released 2009-08-16

Changes since 0.3

device files:
 - based on MPLAB version 8.33, new device files for
   12F520, 18F66J93, 18F67J93, 18F86J93, 18F87J93, 18F87K22, 18F87K90.
 - added:
   + pin-aliases with help of /tools/pinmap_pinsuffix.json.
   + enumeration of bitfield VCFG of ADCON0 and ADCON1 registers
   + const byte ADC_NTOTAL_CHANNEL = <#>  (number of of ADC channels),
   + const byte[] PICTYPE, DATASHEET and PGMSPEC (without letter suffixes)
   + const word DEVICE_ID
   + pseudo variable ADCON0_CHS for 16F7x7 with 'splitted' CHS bits.
   + declaration for pin_A3,1,0 to 18F13/14K50 and their LF variants.
 - removed:
   - fuse_def statements for ENICPORT and for some unsupported bits
     of the 18Fs (protection bits of not present code/data/write memory).
 - fixed:
   * declaration of SFRs of 18Fs: only SFRs above
     0xF00+AccessBankSplitOffset are declared 'shared'.
   * 12F519: registers renamed: PORTB -> GPIO/PORTA, TRISB -> TRISIO;
     T0CS bit setting added to enable_digital_io(), flash-data -> EEPROM.
   * 12F526: fixed missing bit fields of EECON.
   * ANSEL of 12F609, 12HV609, 16F610, and 16HV610 rehabilitated
     (these chips have no ADC, but do have an analog comparator).
   * pragma code for 16-bits core specified in bytes (was words)