@@ -1887,4 +1887,218 @@ adc_pcfg = \
 			'AN0/RA0' : 'D',
 	  },
  },
+ '39887B': {
+	  # same config for '0001' and '0010', only keep one config
+	  # else will produce error in ADC lib generation
+	  '0000': {
+	 		'AN12/RB0': 'A',
+	 		'AN11/RB4': 'A',
+			'AN10/RB1': 'A',
+			'AN9/RB3' : 'A',
+			'AN8/RB2' : 'A',
+			'AN7/RE2' : 'A',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '0011': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'A',
+			'AN10/RB1': 'A',
+			'AN9/RB3' : 'A',
+			'AN8/RB2' : 'A',
+			'AN7/RE2' : 'A',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '0100': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'A',
+			'AN9/RB3' : 'A',
+			'AN8/RB2' : 'A',
+			'AN7/RE2' : 'A',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '0101': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'A',
+			'AN8/RB2' : 'A',
+			'AN7/RE2' : 'A',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '0110': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'A',
+			'AN7/RE2' : 'A',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '0111': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'A',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1000': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'A',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1001': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'A',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1010': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'D',
+			'AN4/RA5' : 'A',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1011': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'D',
+			'AN4/RA5' : 'D',
+			'AN3/RA3' : 'A',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1100': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'D',
+			'AN4/RA5' : 'D',
+			'AN3/RA3' : 'D',
+			'AN2/RA2' : 'A',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1101': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'D',
+			'AN4/RA5' : 'D',
+			'AN3/RA3' : 'D',
+			'AN2/RA2' : 'D',
+			'AN1/RA1' : 'A',
+			'AN0/RA0' : 'A',
+	  },
+	  '1110': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'D',
+			'AN4/RA5' : 'D',
+			'AN3/RA3' : 'D',
+			'AN2/RA2' : 'D',
+			'AN1/RA1' : 'D',
+			'AN0/RA0' : 'A',
+	  },
+	  '1111': {
+	 		'AN12/RB0': 'D',
+	 		'AN11/RB4': 'D',
+			'AN10/RB1': 'D',
+			'AN9/RB3' : 'D',
+			'AN8/RB2' : 'D',
+			'AN7/RE2' : 'D',
+			'AN6/RE1' : 'D',
+			'AN5/RE0' : 'D',
+			'AN4/RA5' : 'D',
+			'AN3/RA3' : 'D',
+			'AN2/RA2' : 'D',
+			'AN1/RA1' : 'D',
+			'AN0/RA0' : 'D',
+	  },
+ }
 }
